# claude-monitor

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  auth-helper  auth-helper.sh  claude-credentials.sh  claude-monitor  credentials-helper.py  export_token.sh  install.py  pyproject.toml  run.sh  test.sh
claude_monitor/: __init__.py  api.py  app_base.py  cli_credentials.py  commands.py  credentials.py  formatting.py  hook.py  iterm2_layout.py  messages.py  settings.py  transfer_crypto.py  tui.py  tui_common.py  tui_simple.py  usage.py  web.py
claude_monitor/screens/: __init__.py  choices.py  confirm_kill.py  context_menu.py  help.py  questions.py
claude_monitor/static/: index.html
claude_monitor/widgets/: __init__.py  dashboard_panel.py  scrollbar.py  session_panel.py  sparkline.py
docs/: CHANGELOG.md  TASKS.md  TODO.md  UNDO-REDUCED-TOKENS.md  rewrite-plan.md
docs/superpowers/plans/: 2026-03-18-web-ui.md  2026-06-08-codex-permission-hooks.md
docs/superpowers/specs/: 2026-03-10-landing-page-design.md  2026-03-13-linux-compatibility-design.md  2026-03-18-vhs-ui-tests-design.md  2026-03-18-web-ui-design.md  2026-06-09-credentials-helper-python-port-design.md  2026-06-09-credentials-transfer-encryption-design.md
tests/: conftest.py  test_api_endpoints.py  test_app_base_extended.py  test_claude_credentials.py  test_cli_credentials.py  test_command_palette.py  test_commands_extended.py  test_credentials.py  test_credentials_helper.py  test_dashboard.py  test_event_formatting.py  test_event_routing.py  test_formatting.py  test_formatting_full.py  test_handle_port_in_use.py  test_hide_empty_tabs.py  test_hook.py  test_hook_extended.py  test_hook_tui_probe.py  test_init_utils.py  test_installer_hooks.py  test_installer_statusline.py  test_installer_symlink.py  test_keyboard_actions.py  test_modals.py  test_pause_modes.py  test_phantom_panel_prevention.py  test_screens_pure.py  test_scrollbar.py  test_session_lifecycle.py  test_settings_extended.py  test_state_persistence.py  test_status_bar.py  test_statusline.py  test_tab_management.py  test_transfer_crypto.py  test_tui_keystroke_suppression.py  test_tui_simple_extended.py  test_usage.py  test_web.py
tests/fixtures/installer_hooks/: 01_no_file.json  02_empty_hooks_dict.json  (+10 more)
