[project]
name = "claude-monitor"
version = "1.0.18"
description = "Monitor and auto-accept Claude Code permission prompts"
requires-python = ">=3.12"
dependencies = [
    "cairosvg",  # Requires system packages on Linux: libcairo2-dev (Debian/Ubuntu) or cairo-devel (Fedora/RHEL)
    "iterm2>=2.14; sys_platform == 'darwin'",
    "textual>=1.0",
]

[project.scripts]
claude-monitor = "claude_monitor.tui:main"
claude-monitor-hook = "claude_monitor.hook:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
