[project]
name = "claude-monitor"
version = "1.0.37"
description = "Monitor and auto-accept Claude Code permission prompts"
requires-python = ">=3.12"
dependencies = [
    "cairosvg",  # Requires system packages on Linux: libcairo2-dev (Debian/Ubuntu) or cairo-devel (Fedora/RHEL)
    "iterm2>=2.14; sys_platform == 'darwin'",
    "textual>=1.0",
    "websockets>=13.0,<15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 15
addopts = "--cov=claude_monitor --cov=install --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "tests/*",
    ".venv/*",
    "claude_monitor/iterm2_layout.py",
    "claude_monitor/tui.py",
]

[project.scripts]
claude-monitor = "claude_monitor.tui:main"
claude-monitor-hook = "claude_monitor.hook:main"
claude-monitor-statusline = "claude_monitor.hook:statusline_main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
claude_monitor = ["static/*", "static/fonts/*"]
